Adiciona suporte a metas no componente de caminhão. Refatora a exibição de metas ativas e implementa validações no formulário de edição de metas.

--- a/frota-pro/src/app/features/caminhoes/caminhao-detalhe/caminhao-detalhe.component.html
+++ b/frota-pro/src/app/features/caminhoes/caminhao-detalhe/caminhao-detalhe.component.html
@@ -152,8 +152,7 @@
     <ng-template #metaEmpty>
       <div class="empty small">
         <div class="txt">
-          <span *ngIf="metaLoading">Carregando meta...</span>
-          <span *ngIf="!metaLoading">Nenhuma meta ativa para a data atual</span>
+          <span>Sem meta ativa</span>
         </div>
       </div>
     </ng-template>
