--- a/frota-pro/src/app/features/metas/metas.component.html
+++ b/frota-pro/src/app/features/metas/metas.component.html
@@ -153,12 +153,15 @@
 
       <form class="modal-form" (ngSubmit)="salvar()">
         <div class="form-row">
-          <div>
+          <div class="field">
             <label>Tipo</label>
-            <input type="text" [(ngModel)]="form.tipoMeta" name="tipoMeta" required />
+            <select [(ngModel)]="form.tipoMeta" name="tipoMeta" required (change)="onTipoMetaChange()">
+              <option value="" disabled>Selecione...</option>
+              <option *ngFor="let t of tiposMeta" [value]="t.value">{{ t.label }}</option>
+            </select>
           </div>
 
-          <div>
+          <div class="field">
             <label>Status</label>
             <select [(ngModel)]="form.statusMeta" name="statusMeta">
               <option value="EM_ANDAMENTO">EM_ANDAMENTO</option>
@@ -169,59 +172,68 @@
         </div>
 
         <div class="form-row">
-          <div>
+          <div class="field">
             <label>Data Início</label>
             <input type="date" [(ngModel)]="form.dataIncio" name="dataIncio" required />
           </div>
 
-          <div>
+          <div class="field">
             <label>Data Fim</label>
             <input type="date" [(ngModel)]="form.dataFim" name="dataFim" required />
           </div>
         </div>
 
-        <div class="form-row">
-          <div>
+        <div class="form-row three">
+          <div class="field">
             <label>Valor Meta</label>
             <input type="number" step="0.01" [(ngModel)]="form.valorMeta" name="valorMeta" />
           </div>
 
-          <div>
+          <div class="field">
             <label>Valor Realizado</label>
             <input type="number" step="0.01" [(ngModel)]="form.valorRealizado" name="valorRealizado" />
           </div>
 
-          <div>
+          <div class="field">
             <label>Unidade</label>
-            <input type="text" [(ngModel)]="form.unidade" name="unidade" placeholder="Ex: M/LT" />
+            <input type="text" [(ngModel)]="form.unidade" name="unidade" placeholder="Ex: km/l" />
           </div>
         </div>
 
-        <div class="form-row">
-          <div>
-            <label>Caminhão (código)</label>
-            <input type="text" [(ngModel)]="form.caminhao" name="caminhao" placeholder="Ex: CAM-000030" />
+        <div class="form-section">
+          <div class="section-title">Alvo</div>
+          <div class="form-row">
+            <div class="field">
+              <label>Caminhão (código)</label>
+              <input type="text" [(ngModel)]="form.caminhao" name="caminhao" placeholder="Ex: CAM-000030" />
+            </div>
+
+            <div class="field">
+              <label>Categoria (código)</label>
+              <input type="text" [(ngModel)]="form.categoria" name="categoria" placeholder="Ex: CAT-000001" />
+            </div>
           </div>
 
-          <div>
-            <label>Categoria (código)</label>
-            <input type="text" [(ngModel)]="form.categoria" name="categoria" placeholder="Ex: CAT-000001" />
+          <div class="form-row">
+            <div class="field">
+              <label>Motorista (código)</label>
+              <input type="text" [(ngModel)]="form.motorista" name="motorista" placeholder="Ex: MOT-000010" />
+            </div>
+
+            <div class="checkbox-stack">
+              <div class="checkbox-row">
+                <input type="checkbox" [(ngModel)]="form.renovarAutomaticamente" name="renovarAutomaticamente" />
+                <span>Renovar automaticamente</span>
+              </div>
+              <div class="checkbox-row">
+                <input type="checkbox" [(ngModel)]="form.recalcularProgresso" name="recalcularProgresso" />
+                <span>Recalcular progresso</span>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="form-row">
-          <div>
-            <label>Motorista (código)</label>
-            <input type="text" [(ngModel)]="form.motorista" name="motorista" placeholder="Ex: MOT-000010" />
-          </div>
-
-          <div class="checkbox-row">
-            <input type="checkbox" [(ngModel)]="form.renovarAutomaticamente" name="renovarAutomaticamente" />
-            <span>Renovar automaticamente</span>
-          </div>
-        </div>
-
-        <div>
+        <div class="field">
           <label>Descrição</label>
           <input type="text" [(ngModel)]="form.descricao" name="descricao" placeholder="Opcional..." />
         </div>
